--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <!-- add in CSS? Link other HTML  -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css">
+<meta name=”viewport” content="width=device-width", initial-scale="1.0">
 </head>
 <body>
   <!-- Start Nav -->
@@ -25,11 +26,12 @@
 <h1>About Me</h1>
 <div class="container">
   <div class="row">
-    <div class="col-2">
+    <div class="col-4">
       <img src="https://via.placeholder.com/150" alt="Placeholder">
     </div>
+
 <!-- About me Text -->
-    <div class="col-7">
+    <div class="col-8">
       <p>
         Did you hear that? They've shut down the main reactor. We'll be destroyed for sure. 
         This is madness! We're doomed! There'll be no escape for the Princess this time. W
@@ -41,9 +43,7 @@
 
   
 
-    <div class="col-3">
-      two of three columns
-    </div>
+  
   </div>
 </div>
 
