updated file paths

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <a class="nav-link active" aria-current="page" href="#">About</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Portfolio</a>
+      <a class="nav-link" href="linking/portfolio.html">Portfolio</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Contact</a>
+      <a class="nav-link" href="linking/contact.html">Contact</a>
     </li>
     <li class="nav-item">
       <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
