--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <!-- Start Nav -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <ul class="nav">
     <li class="nav-item">
       <a class="nav-link active" aria-current="page" href="#">About</a>
@@ -21,6 +22,7 @@
       <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
     </li>
   </ul>
+</nav>
 
 <!-- Body / Content below -->
 <h1>About Me</h1>
@@ -40,10 +42,6 @@
         We'll be sent to the spice mine of Kessel or smashed into who knows what! Wait a minute, where are you going?
       </p>
     </div>
-
-  
-
-  
   </div>
 </div>
 
