--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
   </div>
 </div>
 
+<footer class="footer">
+  <div class="container">
+    <span>Made by TPows</span>
+  </div>
+</footer>
 </body>
 
 
@@ -56,4 +61,3 @@
     </div>
   </div>
 <!-- Footer below -->
-<footer>Made by T Pows</footer>
