--- a/linking/portfolio.html
+++ b/linking/portfolio.html
@@ -24,7 +24,7 @@
   </ul>
 </nav>
 
-<!-- Body / Content below -->
+<!-- portfolio images below -->
 <h1>Portfolio</h1>
 <div class="container">
   <div class="row">
@@ -50,6 +50,7 @@
 
 </div>
 
+<!-- footer info -->
 
 <footer class="footer">
   <div class="container">
@@ -58,10 +59,10 @@
 </footer>
 </body>
 
+<!-- extra code -->
 
-
-<div class="container">
+<!-- <div class="container">
     <div class="row">
 
 </div>
-</div>
+</div> -->
