changed row sizes

--- a/linking/portfolio.html
+++ b/linking/portfolio.html
@@ -28,21 +28,21 @@
 <h1>Portfolio</h1>
 <div class="container">
   <div class="row">
-    <div class="col-md">
+    <div class="col-lg-4">
       <img src="https://via.placeholder.com/150" alt="Placeholder">
       <img src="https://via.placeholder.com/150" alt="Placeholder">
     </div>
   </div>
 
 <div class="row">
-    <div class="col-md">
+    <div class="col-lg-4">
       <img src="https://via.placeholder.com/150" alt="Placeholder">
       <img src="https://via.placeholder.com/150" alt="Placeholder">
     </div>
   </div>
 
   <div class="row">
-    <div class="col-md">
+    <div class="col-lg-4">
       <img src="https://via.placeholder.com/150" alt="Placeholder">
       <img src="https://via.placeholder.com/150" alt="Placeholder">
     </div>
