--- a/linking/portfolio.html
+++ b/linking/portfolio.html
@@ -1,62 +1,96 @@
 <!DOCTYPE html>
+
 <head>
-<!-- add in CSS? Link other HTML  -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-<link rel="stylesheet" href="style.css">
-<meta name=”viewport” content="width=device-width", initial-scale="1.0">
+  <!-- add in CSS? Link other HTML  -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <meta name=”viewport” content="width=device-width" , initial-scale="1.0">
 </head>
+
 <body>
   <!-- Start Nav -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <ul class="nav">
-    <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="#">About</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="linking/portfolio.html">Portfolio</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="linking/contact.html">Contact</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-    </li>
-  </ul>
-</nav>
+    <ul class="nav">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="linking/portfolio.html">Portfolio</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="linking/contact.html">Contact</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+      </li>
+    </ul>
+  </nav>
 
-<!-- portfolio images below -->
-<h1>Portfolio</h1>
-<div class="container">
-  <div class="row">
-    <div class="col-lg-4">
-      <img src="https://via.placeholder.com/150" alt="Placeholder">
-      <img src="https://via.placeholder.com/150" alt="Placeholder">
-    </div>
-  </div>
-
-<div class="row">
-    <div class="col-lg-4">
-      <img src="https://via.placeholder.com/150" alt="Placeholder">
-      <img src="https://via.placeholder.com/150" alt="Placeholder">
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-lg-4">
-      <img src="https://via.placeholder.com/150" alt="Placeholder">
-      <img src="https://via.placeholder.com/150" alt="Placeholder">
-    </div>
-  </div>
-
-</div>
-
-<!-- footer info -->
-
-<footer class="footer">
+  <!-- portfolio images below -->
+  <h1>Portfolio</h1>
   <div class="container">
-    <span>Made by TPows</span>
+    <div class="row">
+
+      <div class="col-12 col-md-6 col-lg-3 py-1">
+        <img src="https://via.placeholder.com/150" alt="Placeholder">
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-3 py-1">
+        <img src="https://via.placeholder.com/150" alt="Placeholder">
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-3 py-1">
+        <img src="https://via.placeholder.com/150" alt="Placeholder">
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-3 py-1">
+        <img src="https://via.placeholder.com/150" alt="Placeholder">
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-3 py-1">
+        <img src="https://via.placeholder.com/150" alt="Placeholder">
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-3 py-1">
+        <img src="https://via.placeholder.com/150" alt="Placeholder">
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-3 py-1">
+        <img src="https://via.placeholder.com/150" alt="Placeholder">
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-3 py-1">
+        <img src="https://via.placeholder.com/150" alt="Placeholder">
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-3 py-1">
+        <img src="https://via.placeholder.com/150" alt="Placeholder">
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-3 py-1">
+        <img src="https://via.placeholder.com/150" alt="Placeholder">
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-3 py-1">
+        <img src="https://via.placeholder.com/150" alt="Placeholder">
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-3 py-1">
+        <img src="https://via.placeholder.com/150" alt="Placeholder">
+      </div>
+
+    </div>
+
   </div>
-</footer>
+
+  <!-- footer info -->
+
+  <footer class="footer">
+    <div class="container">
+      <span>Made by TPows</span>
+    </div>
+  </footer>
 </body>
 
 <!-- extra code -->
