--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css">
 <meta name=”viewport” content="width=device-width", initial-scale="1.0">
+<Title>Toni Powell</Title>
 </head>
 <body>
   <!-- Start Nav -->
@@ -28,19 +29,23 @@
 <h1>About Me</h1>
 <div class="container">
   <div class="row">
-    <div class="col-4">
+    <div class="col-sm col-md col-lg">
       <img src="https://via.placeholder.com/150" alt="Placeholder">
     </div>
 
 <!-- About me Text -->
-    <div class="col-8">
+    <div class="col-sm col-md col-lg">
       <p>
-        Did you hear that? They've shut down the main reactor. We'll be destroyed for sure. 
-        This is madness! We're doomed! There'll be no escape for the Princess this time. W
-        hat's that? Artoo! Artoo-Detoo, where are you? At last! Where have you been? 
-        They're heading in this direction. What are we going to do? 
-        We'll be sent to the spice mine of Kessel or smashed into who knows what! Wait a minute, where are you going?
+        <h2>Hi there 👋</h2>
+      🌱 I am an aspiring developer - currently enrolled in UNH's Coding Bootcamp. 
+      🤔 Please feel free to send me any resources or things that might help a new coder along the way!
+      <div class="col-sm col-md col-lg">
+      <h3>⚡ Fun facts: </h3>
+        My biggest guilty pleasure is most things true crime.
+        I have two dogs - Bonnie, and Jack Bauer.
+        I've lived in 8 different cities / towns on the east and west coast
       </p>
+    </div>
     </div>
   </div>
 </div>
