--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
     <li class="nav-item">
       <a class="nav-link" href="linking/contact.html">Contact</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-    </li>
+   
   </ul>
 </nav>
 
@@ -50,19 +48,25 @@
   </div>
 </div>
 
-<footer class="footer">
+<!-- <footer class="footer">
   <div class="container">
+    <div class="row">
     <span>Made by TPows</span>
+   </div>
   </div>
+</footer> -->
+<footer>
+
+<div class="footer text-center py-3">Made By
+  <a href="https://tonipow3ll.github.io/"> Toni Powell</a>
+</div>
 </footer>
 </body>
 
-
-
-<div class="container">
+<!-- <div class="container">
     <div class="row">
 
 
     </div>
-  </div>
+  </div> -->
 <!-- Footer below -->
