--- a/linking/contact.html
+++ b/linking/contact.html
@@ -7,9 +7,23 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link src="linking/contact.css" rel="stylesheet">
     <meta name=”viewport” content="width=device-width", initial-scale="1.0">
-
     </head>
-    
+    <!-- Start nav -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <ul class="nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="linking/portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="linking/contact.html">Contact</a>
+          </li>
+         
+        </ul>
+      </nav>
+      <!-- start contact info -->
     <div class="container contact-form">
                 <div class="contact-image">
                     <img src="https://image.ibb.co/kUagtU/rocket_contact.png" alt="rocket_contact"/>
