--- a/linking/contact.html
+++ b/linking/contact.html
@@ -31,7 +31,7 @@
                 <form method="post">
                     <h3>Drop Us a Message</h3>
                    <div class="row">
-                        <div class="col-md-6">
+                        <div class="col xs col-sm col-md col-lg">
                             <div class="form-group">
                                 <input type="text" name="txtName" class="form-control" placeholder="Your Name *" value="" />
                             </div>
