--- a/index.html
+++ b/index.html
@@ -48,25 +48,14 @@
   </div>
 </div>
 
-<!-- <footer class="footer">
-  <div class="container">
+<div class="container-fluid text-center text-md-left">
+<footer class="page-footer font-small gray pt-4">
     <div class="row">
-    <span>Made by TPows</span>
-   </div>
-  </div>
-</footer> -->
-<footer>
-
-<div class="footer text-center py-3">Made By
-  <a href="https://tonipow3ll.github.io/"> Toni Powell</a>
-</div>
-</footer>
-</body>
-
-<!-- <div class="container">
-    <div class="row">
-
-
+      <div class="col-md-3 mb-md-0 mb-3">
+      </div>
     </div>
-  </div> -->
-<!-- Footer below -->
+  </div>
+  <div class="footer-copyright text-center py-3">Made By
+    <a href="https://tonipow3ll.github.io/">TPows</a>
+  </div>
+</footer>
