--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <head>
-<!-- add in CSS? Link other HTML  -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css">
 <meta name=”viewport” content="width=device-width", initial-scale="1.0">
@@ -22,13 +21,14 @@
    
   </ul>
 </nav>
+<!-- End Nav -->
 
 <!-- Body / Content below -->
 <h1>About Me</h1>
 <div class="container">
   <div class="row">
     <div class="col-sm col-md col-lg">
-      <img src="https://via.placeholder.com/150" alt="Placeholder">
+      <img src="https://via.placeholder.com/200" alt="Placeholder">
     </div>
 
 <!-- About me Text -->
