--- a/linking/portfolio.html
+++ b/linking/portfolio.html
@@ -86,17 +86,14 @@
 
   <!-- footer info -->
 
-  <footer class="footer">
-    <div class="container">
-      <span>Made by TPows</span>
-    </div>
-  </footer>
-</body>
-
-<!-- extra code -->
-
-<!-- <div class="container">
-    <div class="row">
-
-</div>
-</div> -->
+  <div class="container-fluid text-center text-md-left">
+    <footer class="page-footer font-small gray pt-4">
+        <div class="row">
+          <div class="col-md-3 mb-md-0 mb-3">
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright text-center py-3">Made By
+        <a href="https://tonipow3ll.github.io/">TPows</a>
+      </div>
+    </footer>
