--- a/linking/contact.html
+++ b/linking/contact.html
@@ -54,4 +54,16 @@
                 </form>
     </div>
 
+    <div class="container-fluid text-center text-md-left">
+        <footer class="page-footer font-small gray pt-4">
+            <div class="row">
+              <div class="col-md-3 mb-md-0 mb-3">
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright text-center py-3">Made By
+            <a href="https://tonipow3ll.github.io/">TPows</a>
+          </div>
+        </footer>
+        
     </html>
