--- a/linking/contact.html
+++ b/linking/contact.html
@@ -29,7 +29,7 @@
                     <img src="https://image.ibb.co/kUagtU/rocket_contact.png" alt="rocket_contact"/>
                 </div>
                 <form method="post">
-                    <h3>Drop Us a Message</h3>
+                    <h3>Drop a Message</h3>
                    <div class="row">
                         <div class="col xs col-sm col-md col-lg">
                             <div class="form-group">
@@ -65,5 +65,5 @@
             <a href="https://tonipow3ll.github.io/">TPows</a>
           </div>
         </footer>
-        
+
     </html>
