added language tags to head

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
+
 <head>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-<link rel="stylesheet" href="style.css">
-<meta name=”viewport” content="width=device-width", initial-scale="1.0">
+  <html lang="en-us">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <Title>Toni Powell</Title>
+
 </head>
+
 <body>
   <!-- Start Nav -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -18,7 +23,6 @@
     <li class="nav-item">
       <a class="nav-link" href="linking/contact.html">Contact</a>
     </li>
-   
   </ul>
 </nav>
 <!-- End Nav -->
@@ -33,21 +37,21 @@
 
 <!-- About me Text -->
     <div class="col-sm col-md col-lg">
-      <p>
+      
         <h2>Hi there 👋</h2>
       🌱 I am an aspiring developer - currently enrolled in UNH's Coding Bootcamp. 
       🤔 Please feel free to send me any resources or things that might help a new coder along the way!
       <div class="col-sm col-md col-lg">
       <h3>⚡ Fun facts: </h3>
-        My biggest guilty pleasure is most things true crime.
+      <p> My biggest guilty pleasure is most things true crime.
         I have two dogs - Bonnie, and Jack Bauer.
         I've lived in 8 different cities / towns on the east and west coast
       </p>
+        </div>
+      </div>
     </div>
-    </div>
-  </div>
 </div>
-
+</body>
 <div class="container-fluid text-center text-md-left">
 <footer class="page-footer font-small gray pt-4">
     <div class="row">
@@ -59,3 +63,4 @@
     <a href="https://tonipow3ll.github.io/">TPows</a>
   </div>
 </footer>
+</html>
