--- a/linking/contact.html
+++ b/linking/contact.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
 <head>
-    
+    <html lang="en-us">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link src="linking/contact.css" rel="stylesheet">
-    <meta name=”viewport” content="width=device-width", initial-scale="1.0">
+    <link rel="stylesheet" href="./linking/contact.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Page</title>
     </head>
     <!-- Start nav -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -25,9 +25,6 @@
       </nav>
       <!-- start contact info -->
     <div class="container contact-form">
-                <div class="contact-image">
-                    <img src="https://image.ibb.co/kUagtU/rocket_contact.png" alt="rocket_contact"/>
-                </div>
                 <form method="post">
                     <h3>Drop a Message</h3>
                    <div class="row">
