--- a/linking/portfolio.html
+++ b/linking/portfolio.html
@@ -2,10 +2,11 @@
 
 <head>
   <!-- add in CSS? Link other HTML  -->
+  <html lang="en-us">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-  <meta name=”viewport” content="width=device-width" , initial-scale="1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -97,3 +98,4 @@
         <a href="https://tonipow3ll.github.io/">TPows</a>
       </div>
     </footer>
+    </html>
