--- a/linking/portfolio.html
+++ b/linking/portfolio.html
@@ -5,26 +5,24 @@
   <html lang="en-us">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="linking/portfolio.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
   <!-- Start Nav -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg">
     <ul class="nav">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">About</a>
+        <a class="nav-link active text-dark" aria-current="page" href="#">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="linking/portfolio.html">Portfolio</a>
+        <a class="nav-link text-dark" href="linking/portfolio.html">Portfolio</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="linking/contact.html">Contact</a>
+        <a class="nav-link text-dark" href="linking/contact.html">Contact</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-      </li>
+
     </ul>
   </nav>
 
