--- a/linking/contact.html
+++ b/linking/contact.html
@@ -4,7 +4,7 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="./linking/contact.css">
+    <link rel="stylesheet" href="contact.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Page</title>
     </head>
@@ -12,13 +12,13 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">About</a>
+            <a class="nav-link active text-dark" aria-current="page" href="index.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="linking/portfolio.html">Portfolio</a>
+            <a class="nav-link text-dark" href="linking/portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="linking/contact.html">Contact</a>
+            <a class="nav-link text-dark" href="linking/contact.html">Contact</a>
           </li>
          
         </ul>
