--- a/linking/portfolio.html
+++ b/linking/portfolio.html
@@ -5,7 +5,7 @@
   <html lang="en-us">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-  <link rel="stylesheet" href="linking/portfolio.css">
+  <link rel="stylesheet" href="portfolio.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
