--- a/linking/portfolio.html
+++ b/linking/portfolio.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+<html lang="en-us">
 
 <head>
   <!-- add in CSS? Link other HTML  -->
-  <html lang="en-us">
+  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link rel="stylesheet" href="portfolio.css">
@@ -11,21 +12,27 @@
 
 <body>
   <!-- Start Nav -->
-  <nav class="navbar navbar-expand-lg navbar-light bg">
-    <ul class="nav">
-      <li class="nav-item">
-        <a class="nav-link active text-dark" aria-current="page" href="#">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-dark" href="linking/portfolio.html">Portfolio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-dark" href="linking/contact.html">Contact</a>
-      </li>
-
-    </ul>
-  </nav>
-
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <div class="mx-auto order-0">
+        <a class="navbar-brand mx-auto" href="#">Toni Powell</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </div>
+    <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2 justify-content-end">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="linking/portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="linking/contact.html">Contact</a>
+            </li>
+        </ul>
+    </div>
+</nav>
   <!-- portfolio images below -->
   <h1>Portfolio</h1>
   <div class="container">
