--- a/index.html
+++ b/index.html
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
+<html lang="en-us">
 
 <head>
-  <html lang="en-us">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link rel="stylesheet" href="linking/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <Title>Toni Powell</Title>
-
 </head>
 
 <body>
+
   <!-- Start Nav -->
-  <nav class="navbar navbar-expand-lg navbar-light bg">
-  <ul class="nav">
-    <li class="nav-item">
-      <a class="nav-link active text-dark" aria-current="page" href="#">About</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link text-dark" href="linking/portfolio.html">Portfolio</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link text-dark" href="linking/contact.html">Contact</a>
-    </li>
-  </ul>
+
+<!-- below works -->
+
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+  <div class="mx-auto order-0">
+      <a class="navbar-brand mx-auto" href="#">Toni Powell</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+  </div>
+  <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2 justify-content-end">
+      <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+              <a class="nav-link" href="index.html">About</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="linking/portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="linking/contact.html">Contact</a>
+          </li>
+      </ul>
+  </div>
 </nav>
+
 <!-- End Nav -->
 
 <!-- Body / Content below -->
