--- a/linking/contact.html
+++ b/linking/contact.html
@@ -1,32 +1,41 @@
 <!DOCTYPE html>
+<html lang="en-us">
 <head>
-    <html lang="en-us">
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+   <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">  
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="contact.css">
+    <!-- <link rel="stylesheet" href="contact.css"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Page</title>
     </head>
     <!-- Start nav -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <ul class="nav">
-          <li class="nav-item">
-            <a class="nav-link active text-dark" aria-current="page" href="index.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-dark" href="linking/portfolio.html">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-dark" href="linking/contact.html">Contact</a>
-          </li>
-         
-        </ul>
-      </nav>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <div class="mx-auto order-0">
+          <a class="navbar-brand mx-auto" href="#">Toni Powell</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+      </div>
+      <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2 justify-content-end">
+          <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                  <a class="nav-link" href="index.html">About</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="linking/portfolio.html">Portfolio</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="linking/contact.html">Contact</a>
+              </li>
+          </ul>
+      </div>
+  </nav>
+  
       <!-- start contact info -->
     <div class="container contact-form">
                 <form method="post">
-                    <h3>Drop a Message</h3>
+                    <h3>Leave a Message</h3>
                    <div class="row">
                         <div class="col xs col-sm col-md col-lg">
                             <div class="form-group">
