--- a/index.html
+++ b/index.html
@@ -7,13 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <Title>Toni Powell</Title>
 </head>
-
-<body>
-
   <!-- Start Nav -->
 
-<!-- below works -->
-
+<body>
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <div class="mx-auto order-0">
       <a class="navbar-brand mx-auto" href="#">Toni Powell</a>
@@ -39,6 +35,7 @@
 <!-- End Nav -->
 
 <!-- Body / Content below -->
+
 <h1>About Me</h1>
 <div class="container">
   <div class="row">
@@ -52,26 +49,29 @@
         <h2>Hi there 👋</h2>
       🌱 I am an aspiring developer - currently enrolled in UNH's Coding Bootcamp. 
       🤔 Please feel free to send me any resources or things that might help a new coder along the way!
-      <div class="col-sm col-md col-lg">
-      <h3>⚡ Fun facts: </h3>
-      <p> My biggest guilty pleasure is most things true crime.
-        I have two dogs - Bonnie, and Jack Bauer.
-        I've lived in 8 different cities / towns on the east and west coast
-      </p>
+         <div class="col-sm col-md col-lg">
+         <h3>⚡ Fun facts: </h3>
+            <p> My biggest guilty pleasure is most things true crime.
+               I have two dogs - Bonnie, and Jack Bauer.
+               I've lived in 8 different cities / towns on the east and west coast
+           </p>
         </div>
       </div>
     </div>
-</div>
-</body>
+  </div>
+
+
+<!-- Footer -->
 <div class="container-fluid text-center text-md-left">
-<footer class="page-footer font-small gray pt-4">
-    <div class="row">
-      <div class="col-md-3 mb-md-0 mb-3">
-      </div>
+  <div class="row">
+    <div class="col-md-3 mb-md-0 mb-3">
     </div>
   </div>
+</div>
+<footer class="page-footer font-small gray pt-4">
   <div class="footer-copyright text-center py-3">Made By
     <a href="https://tonipow3ll.github.io/">TPows</a>
   </div>
 </footer>
+</body>
 </html>
