--- a/linking/contact.html
+++ b/linking/contact.html
@@ -1,10 +1,13 @@
+<!DOCTYPE html>
 <html lang="en-us">
     <head>
-        <meta name="viewport" content="width=device-width, initial scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">    
-        <link href="linking/contact.css" rel="stylesheet" type="css">
+        <link rel="stylesheet" href="contact.css">
+        <meta name="viewport" content="width=device-width, initial scale=1.0">
+        <title>Get in touch!</title>
     </head>
-    <!-- Start Nav -->
+    <!-- Start Nav --> 
+    <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="mx-auto order-0">
             <a class="navbar-brand mx-auto" href="#">Toni Powell</a>
@@ -25,22 +28,23 @@
                 </li>
             </ul>
         </div>
-      </nav>
+      </nav> 
       <!-- End Nav -->
 
       <!-- Start Contact Sheet -->
-<body>
-    <div class="container">
+
+    <h2>Get in touch!</h2>
+     <div class="container">
         <form class="row">
              <div class="col-8 py-4"> 
                  <p>Name</p>
-            <input type="text" class="input-block-level" id="firstname" name="firstname" placeholder="Name">
+            <input type="text" class="form-control-sm form-control-md" id="firstname" name="firstname" placeholder="Name">
                  <div class="col-8 py-4"> 
                      <p>Email</p>
-                <input type="text" class="input-block-level" id="email" name="email" placeholder="Email">
+                <input type="text" class="form-control-sm form-control-md" id="email" name="email" placeholder="Email">
                 <div class="col-8 py-4"> 
                     <p>Message</p>
-               <input type="text" class="input-block-level" id="email" name="email" placeholder="Leave a message!">
+               <input type="text" class="form-control-md form-control-lg" id="message" name="leave-a-message" placeholder="Leave a message!">
                </div>
                <div class="col-8 py-4">
                 <button class="submit">Submit</button>
@@ -52,7 +56,20 @@
             </div>
         </form>
     </div>
-</body>
+    
+    <!-- Footer -->
+    <div class="container-fluid text-center text-md-left">
+        <div class="row">
+          <div class="col-md-3 mb-md-0 mb-3">
+          </div>
+        </div>
+      </div>
+      <footer class="page-footer font-small gray pt-4">
+        <div class="footer-copyright text-center py-3">Made By
+          <a href="https://tonipow3ll.github.io/">TPows</a>
+        </div>
+      </footer>
+    </body>
 
 
 </html>
