--- a/linking/portfolio.html
+++ b/linking/portfolio.html
@@ -11,16 +11,16 @@
   <title>Portfolio</title>
 </head>
 
+<!-- Start Nav -->
 <body>
-  <!-- Start Nav -->
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="mx-auto order-0">
         <a class="navbar-brand mx-auto" href="#">Toni Powell</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
             <span class="navbar-toggler-icon"></span>
         </button>
     </div>
-    <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2 justify-content-end">
+      <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2 justify-content-end">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <a class="nav-link" href="index.html">About</a>
@@ -35,6 +35,7 @@
     </div>
 </nav>
   <!-- portfolio images below -->
+ 
   <h1>Portfolio</h1>
   <div class="container">
     <div class="row">
@@ -92,16 +93,18 @@
   </div>
 
   <!-- footer info -->
-
+  
   <div class="container-fluid text-center text-md-left">
-    <footer class="page-footer font-small gray pt-4">
-        <div class="row">
-          <div class="col-md-3 mb-md-0 mb-3">
-          </div>
-        </div>
+    <div class="row">
+      <div class="col-md-3 mb-md-0 mb-3">
       </div>
-      <div class="footer-copyright text-center py-3">Made By
-        <a href="https://tonipow3ll.github.io/">TPows</a>
-      </div>
-    </footer>
-    </html>
+    </div>
+  </div>
+  <footer class="page-footer font-small gray pt-4">
+    <div class="footer-copyright text-center py-3">Made By
+      <a href="https://tonipow3ll.github.io/">TPows</a>
+    </div>
+  </footer>
+</body>    
+
+  </html>
