--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link rel="stylesheet" href="linking/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
 <Title>Toni Powell</Title>
 </head>
   <!-- Start Nav -->
@@ -12,7 +13,7 @@
 <body>
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <div class="mx-auto order-0">
-      <a class="navbar-brand mx-auto" href="#">Toni Powell</a>
+      <a class="navbar-brand mx-auto px-2" href="#">Toni Powell</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
           <span class="navbar-toggler-icon"></span>
       </button>
