--- a/linking/portfolio.html
+++ b/linking/portfolio.html
@@ -7,6 +7,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link rel="stylesheet" href="portfolio.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
 </head>
@@ -14,7 +16,7 @@
 <!-- Start Nav -->
 <body>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <div class="mx-auto order-0">
+    <div class="mx-auto px-2 order-0">
         <a class="navbar-brand mx-auto" href="#">Toni Powell</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
             <span class="navbar-toggler-icon"></span>
