--- a/linking/portfolio.html
+++ b/linking/portfolio.html
@@ -43,7 +43,13 @@
     <div class="row">
 
       <div class="col-12 col-md-6 col-lg-3 py-1">
-        <img src="https://via.placeholder.com/150" alt="Placeholder">
+        <img src="bio-page.png" alt="Bio Page">
+        <div class="caption center-block"><a href="https://tonipow3ll.github.io/">GitHub</a> </div>
+      </div>
+
+      <div class="col-12 col-md-6 col-lg-3 py-1">
+        <img src="Platypus.png" alt="platypus page">
+        <div class="caption center-block"><a href="https://tonipow3ll.github.io/expert-spork/">Platypuses</a> </div>
       </div>
 
       <div class="col-12 col-md-6 col-lg-3 py-1">
