--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <!-- Body / Content below -->
 
-<h1>About Me</h1>
+<h1 class="px-2">About Me</h1>
 <div class="container">
   <div class="row">
     <div class="col-sm col-md col-lg">
