--- a/linking/contact.html
+++ b/linking/contact.html
@@ -34,7 +34,7 @@
 
       <!-- Start Contact Sheet -->
 
-    <h2>Get in touch!</h2>
+    <h2 class="px-2">Get in touch!</h2>
      <div class="container">
         <form class="row">
              <div class="col-8 py-4"> 
