--- a/linking/portfolio.html
+++ b/linking/portfolio.html
@@ -38,7 +38,7 @@
 </nav>
   <!-- portfolio images below -->
  
-  <h1>Portfolio</h1>
+  <h1 class="px-2">Portfolio</h1>
   <div class="container">
     <div class="row">
 
