--- a/linking/portfolio.html
+++ b/linking/portfolio.html
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="linking/portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="linking/contact.html">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
             </li>
         </ul>
     </div>
