--- a/linking/contact.html
+++ b/linking/contact.html
@@ -19,13 +19,13 @@
         <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2 justify-content-end">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">About</a>
+                    <a class="nav-link" href="/Users/tonipowell/Bootcamp/Portfolio/index.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="linking/portfolio.html">Portfolio</a>
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="linking/contact.html">Contact</a>
+                    <a class="nav-link" href="#">Contact</a>
                 </li>
             </ul>
         </div>
