--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           <li class="nav-item">
               <a class="nav-link" href="linking/contact.html">Contact</a>
           </li>
+          <!-- ADD LINKED IN HERE  -->
       </ul>
   </div>
 </nav>
