--- a/linking/contact.html
+++ b/linking/contact.html
@@ -19,7 +19,7 @@
         <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2 justify-content-end">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="..//index.html">About</a>
+                    <a class="nav-link" href="../index.html">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -27,6 +27,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
                 </li>
+                <!-- ADD LINKED IN HERE  -->
             </ul>
         </div>
       </nav> 
