--- a/linking/portfolio.html
+++ b/linking/portfolio.html
@@ -25,7 +25,7 @@
       <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2 justify-content-end">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href=".//index.html">About</a>
+                <a class="nav-link" href="./index.html">About</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Portfolio</a>
@@ -33,6 +33,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
             </li>
+            <!-- ADD LINKED IN HERE  -->
         </ul>
     </div>
 </nav>
