--- a/index.html
+++ b/index.html
@@ -36,16 +36,27 @@
 
 <!-- End Nav -->
 
+
 <!-- Body / Content below -->
 
-<h1 class="px-2">About Me</h1>
-<div class="container">
-  <div class="row">
+
+<!-- <h1 class="px-2">About Me</h1>
+  <div class="container">
+    <div class="row">
+      <div class="col-4">
+        <img src="linking/abel.jpg" alt="laughing-photo">
+      </div>
+    </div>
+  </div> -->
+
+  <div class="container py-2 mx-auto">
+    <div class="row">
+    <h1 class="px-2">About Me</h1>
     <div class="col-sm col-md col-lg">
       <img src="linking/abel.jpg" alt="laughing-photo">
     </div>
 
-<!-- About me Text -->
+
     <div class="col-sm col-md col-lg">
       
         <h2>Hi there 👋</h2>
@@ -60,16 +71,16 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> 
 
 
 <!-- Footer -->
-<div class="container-fluid text-center text-md-left">
+<!-- <div class="container-fluid text-center text-md-left">
   <div class="row">
     <div class="col-md-3 mb-md-0 mb-3">
     </div>
   </div>
-</div>
+</div> -->
 <footer class="page-footer font-small gray pt-4">
   <div class="footer-copyright text-center py-3">Made By
     <a href="https://tonipow3ll.github.io/">TPows</a>
