--- a/linking/portfolio.html
+++ b/linking/portfolio.html
@@ -39,8 +39,8 @@
 </nav>
   <!-- portfolio images below -->
  
-  <h1 class="px-2">Portfolio</h1>
-  <div class="container">
+  <h1 class="px-2"> Portfolio</h1>
+  <div class="container-fluid">
     <div class="row">
 
       <div class="col-12 col-md-6 col-lg-3 py-1">
@@ -93,9 +93,9 @@
         <img src="https://via.placeholder.com/150" alt="Placeholder">
       </div>
 
-      <div class="col-12 col-md-6 col-lg-3 py-1">
+      <!-- <div class="col-12 col-md-6 col-lg-3 py-1">
         <img src="https://via.placeholder.com/150" alt="Placeholder">
-      </div>
+      </div> -->
 
     </div>
 
@@ -103,12 +103,12 @@
 
   <!-- footer info -->
   
-  <div class="container-fluid text-center text-md-left">
+  <!-- <div class="container-fluid text-center text-md-left">
     <div class="row">
       <div class="col-md-3 mb-md-0 mb-3">
       </div>
     </div>
-  </div>
+  </div> -->
   <footer class="page-footer font-small gray pt-4">
     <div class="footer-copyright text-center py-3">Made By
       <a href="https://tonipow3ll.github.io/">TPows</a>
