--- a/index.html
+++ b/index.html
@@ -36,23 +36,12 @@
 
 <!-- End Nav -->
 
-
 <!-- Body / Content below -->
-
-
-<!-- <h1 class="px-2">About Me</h1>
-  <div class="container">
-    <div class="row">
-      <div class="col-4">
-        <img src="linking/abel.jpg" alt="laughing-photo">
-      </div>
-    </div>
-  </div> -->
 
   <div class="container py-2 mx-auto">
     <div class="row">
     <h1 class="px-2">About Me</h1>
-    <div class="col-sm col-md col-lg">
+    <div class="col-sm col-md col-lg my-3">
       <img src="linking/abel.jpg" alt="laughing-photo">
     </div>
 
