--- a/linking/contact.html
+++ b/linking/contact.html
@@ -38,13 +38,13 @@
     <h2 class="px-2">Get in touch!</h2>
      <div class="container">
         <form class="row">
-             <div class="col-sm col-md col-lg py-4"> 
+             <div class="col-sm py-4"> 
                  <p>Name</p>
             <input type="text" class="form-control-sm form-control-md" id="firstname" name="firstname" placeholder="Name">
-                 <div class="col-sm col-md col-lg py-4"> 
+                 <div class="col-sm py-4"> 
                      <p>Email</p>
                 <input type="text" class="form-control-sm form-control-md" id="email" name="email" placeholder="Email">
-                <div class="col-sm col-md col-lg py-4"> 
+                <div class="col-sm py-4"> 
                     <p>Message</p>
                <input type="text" class="form-control-md form-control-lg" id="message" name="leave-a-message" placeholder="Leave a message!">
                </div>
@@ -53,9 +53,10 @@
                </div>
              </div>
             </div>
-            <div class="col-4">
+            <!-- might add a photo or something to the below eventually, didn't think it added anything useful aesthically for now -->
+            <!-- <div class="col-4">
              <img src="https://via.placeholder.com/150" class="img-thumbnail" alt="Placeholder">
-            </div>
+            </div> -->
         </form>
     </div>
     
