--- a/linking/contact.html
+++ b/linking/contact.html
@@ -27,7 +27,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
                 </li>
-                <!-- ADD LINKED IN HERE  -->
+                <li class="nav-item">
+                    <A class="nav-link" href="www.linkedin.com/in/tonipowell13">LinkedIn</A>
+                  </li>
             </ul>
         </div>
       </nav> 
