--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
           <li class="nav-item">
               <a class="nav-link" href="linking/contact.html">Contact</a>
           </li>
-          <!-- ADD LINKED IN HERE  -->
+          <li class="nav-item">
+            <A class="nav-link" href="www.linkedin.com/in/tonipowell13">LinkedIn</A>
+          </li>
       </ul>
   </div>
 </nav>
