--- a/linking/portfolio.html
+++ b/linking/portfolio.html
@@ -33,6 +33,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
             </li>
+            <li class="nav-item">
+            <A class="nav-link" href="www.linkedin.com/in/tonipowell13">LinkedIn</A>
+          </li>
             <!-- ADD LINKED IN HERE  -->
         </ul>
     </div>
