updated read me

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="linking/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
-<Title>Toni Powell</Title>
+<Title></Title>Toni Powell</Title>
 </head>
   <!-- Start Nav -->
 
