--- a/index.html
+++ b/index.html
@@ -1,39 +1,38 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
 <head>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link rel="stylesheet" href="linking/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
-<Title></Title>Toni Powell</Title>
+<Title>Toni Powell</Title>
 </head>
   <!-- Start Nav -->
 
 <body>
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <div class="mx-auto order-0">
-      <a class="navbar-brand mx-auto px-2" href="#">Toni Powell</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-  </div>
-  <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2 justify-content-end">
-      <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-              <a class="nav-link" href="index.html">About</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="linking/portfolio.html">Portfolio</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="linking/contact.html">Contact</a>
-          </li>
-          <li class="nav-item">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <div class="mx-auto px-2 order-0">
+        <a class="navbar-brand mx-auto" href="#">Toni Powell</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </div>
+      <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2 justify-content-end">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="../index.html">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Portfolio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+            <li class="nav-item">
             <A class="nav-link" href="www.linkedin.com/in/tonipowell13">LinkedIn</A>
           </li>
-      </ul>
-  </div>
+        </ul>
+    </div>
 </nav>
 
 <!-- End Nav -->
