--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="linking/contact.html">Contact</a>
             </li>
             <li class="nav-item">
-            <A class="nav-link" href="linkedin.com/in/tonipowell13">LinkedIn</A>
+            <A class="nav-link" src="linkedin.com/in/tonipowell13" href="linkedin.com/in/tonipowell13">LinkedIn</A>
           </li>
         </ul>
     </div>
