--- a/linking/contact.html
+++ b/linking/contact.html
@@ -27,9 +27,6 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
                 </li>
-                <li class="nav-item">
-                    <A class="nav-link" href="https://www.linkedin.com/in/tonipowell13">LinkedIn</A>
-                 </li>
             </ul>
         </div>
       </nav> 
@@ -70,8 +67,9 @@
         </div>
       </div>
       <footer class="page-footer font-small gray pt-4">
-        <div class="footer-copyright text-center py-3">Made By
-          <a href="https://tonipow3ll.github.io/">TPows</a>
+        <div class="footer-copyright text-center py-3">BS&T
+          <a href="https://tonipow3ll.github.io/">Github</a>
+          <A href="https://www.linkedin.com/in/tonipowell13">LinkedIn</A>
         </div>
       </footer>
     </body>
