--- a/index.html
+++ b/index.html
@@ -28,9 +28,6 @@
             <li class="nav-item">
                 <a class="nav-link" href="linking/contact.html">Contact</a>
             </li>
-            <li class="nav-item">
-            <A class="nav-link" src="https://www.linkedin.com/in/tonipowell13" href="linkedin.com/in/tonipowell13">LinkedIn</A>
-          </li>
         </ul>
     </div>
 </nav>
@@ -72,8 +69,9 @@
   </div>
 </div> -->
 <footer class="page-footer font-small gray pt-4">
-  <div class="footer-copyright text-center py-3">Made By
-    <a href="https://tonipow3ll.github.io/">TPows</a>
+  <div class="footer-copyright text-center py-3">BS&T
+    <a href="https://tonipow3ll.github.io/">Github</a>
+    <A href="https://www.linkedin.com/in/tonipowell13">LinkedIn</A>
   </div>
 </footer>
 </body>
