--- a/linking/portfolio.html
+++ b/linking/portfolio.html
@@ -33,9 +33,6 @@
             <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
             </li>
-            <li class="nav-item">
-            <A class="nav-link" href="https://www.linkedin.com/in/tonipowell13">LinkedIn</A>
-          </li>
         </ul>
     </div>
 </nav>
@@ -112,8 +109,9 @@
     </div>
   </div> -->
   <footer class="page-footer font-small gray pt-4">
-    <div class="footer-copyright text-center py-3">Made By
-      <a href="https://tonipow3ll.github.io/">TPows</a>
+    <div class="footer-copyright text-center py-3">BS&T
+      <a href="https://tonipow3ll.github.io/">Github</a>
+      <A href="https://www.linkedin.com/in/tonipowell13">LinkedIn</A>
     </div>
   </footer>
 </body>    
