--- a/linking/contact.html
+++ b/linking/contact.html
@@ -67,7 +67,7 @@
         </div>
       </div>
       <footer class="page-footer font-small gray pt-4">
-        <div class="footer-copyright text-center py-3">BS&T
+        <div class="footer-copyright text-center py-3 bg-dark">BS&T
           <a href="https://tonipow3ll.github.io/">Github</a>
           <A href="https://www.linkedin.com/in/tonipowell13">LinkedIn</A>
         </div>
