--- a/linking/portfolio.html
+++ b/linking/portfolio.html
@@ -37,6 +37,7 @@
     </div>
 </nav>
   <!-- portfolio images below -->
+  <!-- will probably change this to a carousel eventually, wanted to experiment with making a 'gallery' like page  -->
  
   <h1 class="px-2"> Portfolio</h1>
   <div class="container-fluid">
